--- a/app/public/app/core/elements/global/templates/PageHeader.html
+++ b/app/public/app/core/elements/global/templates/PageHeader.html
@@ -1,4 +1,3 @@
-<div class="page-header">
-    <h1 class="font-light">{ title }</h1>
-    <PageTitle></PageTitle>
+<div class="pageHeader { class }">
+    <h1 class="font-light text-center vertical-center">{ title }</h1>
 </div>
