--- a/app/public/app/core/pages/application/templates/Index.html
+++ b/app/public/app/core/pages/application/templates/Index.html
@@ -1,6 +1,3 @@
-<h1>This is the homepage</h1>
+<PageHeader class="background-jasper" title="Brave gloves"></PageHeader>
 
-<p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi corporis delectus doloribus, eius laborum libero
-    minima modi mollitia nam non odit placeat provident quidem reiciendis sed sunt tenetur ullam vero.
-</p>
+<button class="btn btn-default" id="demoButton">Check out demo</button>
