User implementation with time averages

--- a/app/public/app/core/pages/user/templates/Demo.html
+++ b/app/public/app/core/pages/user/templates/Demo.html
@@ -30,13 +30,13 @@
             Gem. gym tijd:
         </div>
         <div class="col-xs-7">
-            {time.average.session} h
+            {averages.session_time} h
         </div>
         <div class="col-xs-5">
             Effectiefheid:
         </div>
         <div class="col-xs-7">
-            {time.average.active} h
+            {averages.effective_time} h
         </div>
     </div>
 </div>
